--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
       <li><a href="about.html">About</a></li>
     </ul>
   </nav>
+  <main>
+    <figure class="">
+      <img src="img/headshot-square.png"
+    </figure>
+    <article>
+
+    </article>
+  </main>
 </body>
 </html>
