--- a/articles.html
+++ b/articles.html
@@ -41,6 +41,8 @@
     <div id="content">
       <h1 id="title"></h1>
       <p><i id="author-date"></i></p>
+      <p style="color:red"><i>disclaimer: these are NOT my articles. They were written by a Marcy student. This is just for demo purposes
+</i></p>
       <div id="body"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
