--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
     <title>My Website</title>
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-sm navbar-dark bg-dark"
-      aria-label="Third navbar example"
-    >
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ben Spector</a>
+        <a class="navbar-brand" href="index.html">Home</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -34,9 +31,6 @@
 
         <div class="collapse navbar-collapse" id="navbarsExample03">
           <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="articles.html">Articles</a>
             </li>
